[package]
name = "yabf_rs"
version = "0.1.1"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/yabf_rs"
repository = "https://github.com/serd223/yabf"
description = """
  A simple crate that can be used to embed Brainfuck programs into your Rust programs.
"""
readme = "README.MD"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
